Removing remote cluster during domain soft removal